# pytecord_old_archive

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  READMEPLS  docsite.js  import_test.py  license.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  upload.bat
.github/: PULL_REQUEST_TEMPLATE.md
DRFUP/: whyDRFUP.md
api/: __init__.py  channel.py  client.py  err.py  guild.py
dispy/: __init__.py  channel.py  client.py  color.py  embed.py  errs.py  guild.py  message.py  types.py  user.py
dispy-0.1a/: _core.py
disspy/: __init__.py  __main__.py  _core.py  _typing.py  abstract.py  activity.py  annotations.py  app.py  app_commands.py  application.py  application_commands.py  bot.py  channel.py  client.py  connection.py  core.py  embed.py  enums.py  errors.py  errs.py  files.py  guild.py  hook.py  hook_v2.py  http.py  jsongenerators.py  listener.py  logger.py  message.py  objects.py  payloads.py  profiles.py  reaction.py  role.py  route.py  state.py  test.py  thread.py  typ.py  types.py  (+4 more)
disspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
disspy_old/: application.py  channel.py  errors.py  guild.py  reaction.py  state.py  typ.py
disspy_v2/: .rst  __init__.py  app.py  channel.py  client.py  connection.py  enums.py  hook.py  listener.py  mainurl.py  payloads.py  profiles.py  route.py  ui.py  utils.py
docsite/: index.html
examples/: add_event.py  bot_on_message.py  bot_on_reaction.py  bot_on_ready.py  bot_on_typing.py  commands.py  creating_bot.py  get_started.py  message_components.py  slash_command.py  (+1 more)
(+93 files in other folders)
