[project]
name = "infer_pyproject"
version = "0.1.0"
description = "Dispy - package for creating bots for Discord"
authors = [
    "itttgg <aitiiigg1@gmail.com>"
]
license = {file = "LICENSE"}
readme = "README.md"
python = "^3.8"
repository = "https://github.com/itttgg/dispy"
documentation = "https://github.com/itttgg/dispy/blob/main/Docs"

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dev-dependencies]
black = { aiohttp = "^3.6", python = "^3.8" }

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"